Move dirty ranges to bitmap format
Constant work FTW.
